--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,14 @@ services:
       - db
     depends_on:
       - db
+    volumes: ['./www/:/opt/www'] # Code Reload
 
   db:
     build: mysql/.
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports: 
-      - "3306:3306"
+      - "3306:3306" # MySQL Port
     environment:
       MYSQL_DATABASE: db_sfsp
       MYSQL_ROOT_PASSWORD: gcc@2k20~#
