--- a/www/Dockerfile
+++ b/www/Dockerfile
@@ -12,4 +12,4 @@ RUN pip3 install -r requirements.txt
 RUN apt update && apt full-upgrade -y && apt install python3-mysqldb
 
 EXPOSE 80
-CMD python3 main.py
+CMD python3 controller.py
