--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - db
     depends_on:
       - db
-    volumes: ['./www/:/opt/www'] # Code Reload
-    command: python3 controller.py # Production Code: python3 wsgi.py
+    volumes: ['./:/opt/www'] # Code Reload
+    command: python3 app.py # Production Code: python3 wsgi.py
   db:
     image: mysql:5.7
     command: [mysqld, --default-authentication-plugin=mysql_native_password]
